--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./profile.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="nandhana.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>NANDHANA ANANDHAN</h1>
             <p>B.SC.COMPUTER SCIENCE</p>
         </div>
